Steps for set of three mathches

--- a/style.css
+++ b/style.css
@@ -15,10 +15,39 @@ td{
     color:white;
 }
 .btns{
-   display: flex;
+    display: flex;
    justify-content: center;
    margin-top: 20px;
 }
-#b1, #b2, #b3{
+#b1, #b2, #b3, #b4{
     margin:10px;
+}
+.score{
+    width: 200px;
+    height: 100px;
+    position:fixed;
+    right:0;
+    bottom: 0;
+    background-color:rgba(77, 77, 240, 0.747);
+    color:white;
+    text-align: center;
+}
+.Shead{
+    background-color: hotpink;
+    padding:10px 0;
+}
+.tour-winning{
+    position: fixed;
+    top:0;
+    bottom: 0;
+    right:0;
+    left:0;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    opacity: 80%;
+    color:white;
+    font-size: 3em;
+    flex-direction: column;
+    display: none;
 }
