--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 *{
     box-sizing: border-box;
 }
+body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 h1{
-    color:blue;
+    color:brown;
 }
 td{
     border:black solid 2px;
